syntax = "proto3";

message MDRequest {
	string md_body = 1;
}

message MDResponse {
	string html_body = 1;
}

service Converter {
	rpc MarkdownToHTML(MDRequest) returns (MDResponse);
}
